sumo/tests/duarouter/errors/unknown_measure/errors.duarouter.astar
Error: Routing algorithm 'astar' does not support weight-attribute 'blub'.
Quitting (on error).
